# keyfix

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
assets/: attr.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/keyboard/: debounce.rs  hook.rs  mod.rs  types.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: checkbox.vue  keypress-count.vue  slider.vue
